i added explore menu and top dishes with fuctionalities

--- a/savorly-frontend/src/components/navbar/Navbar.css
+++ b/savorly-frontend/src/components/navbar/Navbar.css
@@ -57,7 +57,7 @@
   min-width: 10px;
   min-height: 10px;
   border-radius: 5px;
-  background-color: #008c15;
+  background-color: #37fd12;
   top: -8px;
   right: -8px;
 }
