--- a/savorly-frontend/src/components/explore-menu/exploremenu.css
+++ b/savorly-frontend/src/components/explore-menu/exploremenu.css
@@ -52,3 +52,13 @@
 .explore-menu-list .active {
   border: 4px solid tomato;
 }
+
+/*/////////////////////////////// */
+/* MEDIA QUERY */
+
+@media (max-width: 1050px) {
+  .explore-menu-text {
+    max-width: 100%;
+    font-size: 14px;
+  }
+}
