--- a/savorly-frontend/src/components/footer/footer.css
+++ b/savorly-frontend/src/components/footer/footer.css
@@ -53,3 +53,16 @@
   background-color: grey;
   border: none;
 }
+
+/* MEDIA QUERY */
+@media (max-width: 750px) {
+  .footer-content {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+  }
+
+  .footer-copyright {
+    text-align: center;
+  }
+}
