--- a/admin/src/components/navbar/navbar.css
+++ b/admin/src/components/navbar/navbar.css
@@ -7,6 +7,14 @@
 
 .navbar .logo {
   width: max(10%, 80px);
+  color: #008c15;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.logo-container p {
+  font-weight: 600;
+  font-size: 14px;
 }
 
 .navbar .profile {
