--- a/savorly-frontend/src/pages/place-order/placeorder.css
+++ b/savorly-frontend/src/pages/place-order/placeorder.css
@@ -42,3 +42,11 @@
 .place-order .cart-total button {
   margin-top: 20px;
 }
+
+@media (max-width: 1300px) {
+  .place-order {
+    flex-direction: column;
+    margin-top: 20px;
+    gap: 50px;
+  }
+}
